/*
protoc --go_out=. --go_opt=paths=source_relative \
       --go-grpc_out=. --go-grpc_opt=paths=source_relative \
       proto/user.proto
*/

syntax = "proto3";
package user;
option go_package = "user-service/pb";

service UserService {
  rpc GetUser (UserIdRequest) returns (UserResponse) {}
  rpc CreateUser (UserRequest) returns (UserResponse) {}
}

message UserIdRequest {
  string id = 1;
}

message UserRequest {
    string name = 1;
    string email = 2;
}

message UserResponse {
  string id = 1;
  string name = 2;
  string email = 3;
}
